@@ -1,46 +1,0 @@
-<!DOCTYPE html>
-<html manifest="/cloudcmd.appcache">
-    <head>
-        <meta charset="utf-8">
-        <!-- mobile first design -->
-        <meta content="width=device-width,initial-scale=1" name="viewport" />
-        <title>Cloud Commander</title>
-        
-        <link rel=stylesheet href="/css/reset.css">
-        <link rel=stylesheet href="/css/style.css">
-    </head>
-    <body>
-
-    <ul class="menu hidden">
-        <li>
-            <!-- http://css-tricks.com/examples/IconFont/ -->
-            <a href=settings onclick="return false;">
-                <span class="menu_icon settings hidden"></span>
-            </a>
-            <a href=refresh onclick="return false;">
-                <span class="menu_icon refresh" id=refresh></span>
-            </a>
-        </li>
-    </ul>
-    <div id=fm class=no-js>
-    </div>
-    <div id=keyspanel>
-        <button id=f1 class=cmd-button>F1 - help</button>
-        <button id=f2 class=cmd-button>F2 - rename</button>
-        <button id=f3 class=cmd-button>F3 - view</button>
-        <button id=f4 class=cmd-button>F4 - edit</button>
-        <button id=f5 class=cmd-button>F5 - copy</button>
-        <button id=f6 class=cmd-button>F6 - move</button>
-        <button id=f7 class=cmd-button>F7 - make dir</button>
-        <button id=f8 class=cmd-button>F8 - remove</button>
-    </div>
-    <script src=/lib/util.js></script>
-    <script src=/lib/client/dom.js></script>
-    <script src=/lib/client.js></script>
-    <!--[if lt IE 9]>
-    <script src="//ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js" async></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" id=jquery_min_js ></script>
-    <script src=/lib/client/ie.js id=ie_js ></script>
-    <![endif]-->
-    </body>
-</html>
