@@ -32,7 +32,6 @@ var CloudFunc, exports;
     /* length of longest file name */
     CloudFunc.SHORTNAMELENGTH = 16;
     
-    
     /**
      * Функция убирает последний слеш,
      * если он - последний символ строки
