@@ -58,7 +58,7 @@
         Server          : {},
         
         /* КОНСТАНТЫ */
-        INDEX           : main.DIR + 'index.html'
+        INDEX           : main.DIR + 'html/index.html'
     },
         DirPath             = '/',
         
@@ -134,6 +134,7 @@
         
         CloudServer.indexProcessing = pProcessing.index;
         CloudServer.rest            = pProcessing.rest;
+        CloudServer.route           = pProcessing.route;
         
         this.init(pProcessing.appcache);
         
@@ -182,9 +183,9 @@
     {
         /* Читаем содержимое папки, переданное в url */
         var lConfig     = CloudServer.Config,
-            url         = main.url,
-            lParsedUrl  = url.parse(pReq.url),
-            pathname    = lParsedUrl.pathname,
+            lURL        = main.url,
+            lParsedUrl  = lURL.parse(pReq.url),
+            lPath       = lParsedUrl.pathname,
             
             /* varible contain one of queris:
              * download - change content-type for
@@ -196,13 +197,13 @@
              *              query like this
              *              ?json
              */
-            lQuery = lParsedUrl.query;        
+            lQuery = lParsedUrl.query;
         if(lQuery)
             console.log('query = ' + lQuery);
             
         /* added supporting of Russian language in directory names */
-        pathname = Querystring.unescape(pathname);
-        console.log('pathname: ' + pathname);
+        lPath = Querystring.unescape(lPath);
+        console.log('pathname: ' + lPath);
             
          /* получаем поддерживаемые браузером кодировки*/
          var lAcceptEncoding = pReq.headers['accept-encoding'];
@@ -213,14 +214,14 @@
         if (lAcceptEncoding && 
             lAcceptEncoding.match(/\bgzip\b/) && Zlib)
                 CloudServer.Gzip = true;
-    
+        
         /* путь в ссылке, который говорит
          * что js отключен
          */
         var lNoJS_s = CloudFunc.NOJS,
             lFS_s   = CloudFunc.FS;
         
-        console.log("request for " + pathname + " received...");
+        console.log("request for " + lPath + " received...");
             
         if( lConfig.rest ){
             var lRestWas = Util.exec(CloudServer.rest, {
@@ -232,21 +233,32 @@
                 return;
         }
         
+        if( CloudServer.route){
+            var lRouteWas = Util.exec(CloudServer.route, {
+                    name        : lPath,
+                    request     : pReq,
+                    response    : pRes
+                });
+            
+            if(lRouteWas)
+                return;
+        }
+        
         /* если в пути нет информации ни о ФС,
          * ни об отсутствии js,
          * ни о том, что это корневой
          * каталог - загружаем файлы проэкта
          */
-        if ( !Util.isContainStr(pathname, lFS_s)    &&
-                  !Util.isContainStr(pathname, lNoJS_s)  &&
-                  !Util.strCmp(pathname, '/')            &&
+        if ( !Util.isContainStr(lPath, lFS_s)    &&
+                  !Util.isContainStr(lPath, lNoJS_s)  &&
+                  !Util.strCmp(lPath, '/')            &&
                   !Util.strCmp(lQuery, 'json') ) {
                 
                 /* если имена файлов проекта - загружаем их         *
                  * убираем слеш и читаем файл с текущец директории  */
                 
                 /* добавляем текующий каталог к пути */
-                var lName = '.' + pathname;
+                var lName = '.' + lPath;
                 console.log('reading ' + lName);
                 
                 /* watching is file changed */
@@ -346,16 +358,16 @@
              * длиннее
              */
             
-            if(pathname.indexOf(lNoJS_s) !== lFS_s.length && pathname !== '/')
+            if(lPath.indexOf(lNoJS_s) !== lFS_s.length && lPath !== '/')
                 CloudServer.NoJS = false;            
             else{
                 CloudServer.NoJS = true;
-                pathname = Util.removeStr(pathname, lNoJS_s);                
+                lPath = Util.removeStr(lPath, lNoJS_s);                
             }
             
             /* убираем индекс файловой системы */
-            if(pathname.indexOf(lFS_s) === 0){
-                pathname = Util.removeStr(pathname, lFS_s);
+            if(lPath.indexOf(lFS_s) === 0){
+                lPath = Util.removeStr(lPath, lFS_s);
            
                 /* если посетитель только зашел на сайт
                  * no-js будет пустым, как и fs.
@@ -375,10 +387,10 @@
             /* если в итоге путь пустой
              * делаем его корневым
              */
-            if (pathname === '')
-                pathname = '/';
+            if (lPath === '')
+                lPath = '/';
                         
-            DirPath  = pathname;
+            DirPath  = lPath;
             
             CloudServer.Responses[DirPath]  = pRes;
             
