@@ -48,6 +48,7 @@
     exports.SRVDIR      = SRVDIR    = __dirname + SLASH,
     exports.LIBDIR      = LIBDIR    = path.normalize(SRVDIR + '../'),
     exports.DIR         = DIR       = path.normalize(LIBDIR + '../'),
+    exports.HTMLDIR                 = DIR + 'html/',
     
     /* Functions */
     exports.generateHeaders         = generateHeaders,
@@ -180,7 +181,7 @@
      * @param pGzip - данные сжаты gzip'ом
      */
     function sendFile(pParams){
-        var lRet    = false,
+        var lRet,
             lName   = pParams.name,
             lReq    = pParams.request,
             lRes    = pParams.response,
