@@ -5,11 +5,12 @@
     
     var main        = global.cloudcmd.main,
         DIR         = main.DIR,
-        LIBDIR      = main.LIBDIR;
+        LIBDIR      = main.LIBDIR,
+        HTMLDIR     = main.HTMLDIR;
     
     exports.Minify = {
         /* pathes to directories */
-        INDEX           : DIR + 'index.html', 
+        INDEX           : HTMLDIR + 'index.html', 
         /* приватный переключатель минимизации */
         _allowed               :{
             css     : true,
