@@ -28,6 +28,9 @@ inside event function varible called event do not exist
 
 * Added ability to upload files to dropbox.
 
+* Added ability to authorize on github thru new window,
+changed redirecting url to /auth and added rout function
+to cloudcmd.js
 
 2012.12.12, Version 0.1.8
 
